# CharRealm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/Core/: CMakeLists.txt  Console.cpp  Console.h  ConsoleAppEngine.cpp  ConsoleAppEngine.h  DefaultPage.cpp  DefaultPage.h  ThreadManager.cpp  ThreadManager.h
src/Core/ConsoleHandlers/: InputHandler.cpp  InputHandler.h  LogicHandler.cpp  LogicHandler.h  ScreenHandler.cpp  ScreenHandler.h
src/Core/Interfaces/: IInput.h  ILogic.h  IMainState.h  IRenderable.h
src/Core/PageManagers/: GamePageManager.cpp  GamePageManager.h  LauncherPageManager.cpp  LauncherPageManager.h  PageManager.cpp  PageManager.h
src/Core/UI/: ANSI.h  ButtonObject.cpp  ButtonObject.h  Hoverable.h  IButton.h  Pixel.cpp  Pixel.h  TextObject.cpp  TextObject.h  VisualObject.cpp  VisualObject.h
src/Game/: CMakeLists.txt  Game.cpp  Game.h  GameMainPage.cpp  GameMainPage.h
src/Launcher/: CMakeLists.txt  main.cpp
src/Launcher/Pages/: MainMenuPage.cpp  MainMenuPage.h
